# flywheel

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
exchange/: Cargo.toml  README.md
exchange/src/: interchange.rs  lib.rs  text.rs
exchange/test/: collatz.flyi  identity.flyi  interfaces.flyi
flywheel-ast/: Cargo.toml
flywheel-ast/src/: ast.rs  lib.rs  pretty.rs
flywheel-bytecode/: Cargo.toml
flywheel-bytecode/src/: bytecode.rs
flywheel-common/: Cargo.toml
flywheel-common/src/: lib.rs  sync_interner.rs
flywheel-common/src/keyed_map/: mod.rs
flywheel-compiler/: Cargo.toml
flywheel-compiler/src/: ast.rs  driver.rs  error.rs  file_ast.rs  lexer.rs  lib.rs  located.rs  main.rs  object_pool.rs  parser.rs  query.rs  source.rs  table.rs  token.rs  type_check.rs
flywheel-compiler/src/ast/: ast_struct.rs  ast_type.rs  attribute.rs  binary.rs  block.rs  call.rs  function.rs  if_else.rs  import.rs  index.rs  mod.rs  statement.rs  unary.rs
flywheel-compiler/src/id/: beacon.rs  has_id.rs  mod.rs
flywheel-compiler/src/utils/: beacon.rs  located.rs  mod.rs  once_map.rs  pretty_tree.rs  sync_interner.rs  tag.rs
flywheel-compiler/src/utils/keyed_map/: mod.rs
flywheel-compiler/tests/one_imported/: main.fly
flywheel-compiler/tests/single_file/: main.fly
flywheel-error/: Cargo.toml
flywheel-error/src/: lib.rs
flywheel-exchange/: Cargo.toml
flywheel-exchange/src/: builder.rs  interchange.rs  lib.rs  text.rs  text_old.rs
flywheel-exchange/src/text/: emit.rs  mod.rs
flywheel-interpreter/: Cargo.toml
flywheel-interpreter/src/: builder.rs  bytecode.rs  compile.rs  engine.rs  gc.rs  instr.rs  lib.rs  main.rs  stack.rs  thin.rs  utils.rs  value.rs
flywheel-interpreter/test/: bench_collatz.py  bench_fibo_rec.py
flywheel-lower/: Cargo.toml
flywheel-lower/src/: collect_function_signatures.rs  collect_struct_fields.rs  collect_top_levels.rs  context.rs  lib.rs  lower.rs  namespace.rs  types.rs
flywheel-parser/: Cargo.toml
flywheel-parser/src/: lexer.rs  lib.rs  parser.rs  token.rs
flywheel-parser/test/: control-flow.fly  control-flow.fly.ast  idea.txt  import.fly  import.fly.ast  imported.fly  simple-return.fly  simple-return.fly.ast  simple.fly  simple.fly.ast
flywheel-sources/: Cargo.toml
flywheel-sources/src/: interner.rs  lib.rs  source.rs  span.rs
src/: ast.rs  bytecode.rs  keymap.rs  main.rs  parser.rs
src/codegen/: code_builder.rs  mod.rs  x64.rs
src/frontend/: ast.rs  driver.rs  error.rs  lexer.rs  mod.rs  parser.rs  query.rs  source.rs  token.rs  type_check.rs
src/interpreter/: bytecode.rs  engine.rs  gc.rs  mod.rs  value.rs
src/utils/: keymap.rs  mod.rs  once_map.rs  oncemap.rs  shared.rs  sync_interner.rs
src/utils/keyed_map/: concurrent.rs  mod.rs  reservable.rs  sharded.rs
test/: control-flow.fly.ast  idea.txt  import.fly  simple-return.fly.ast  simple-struct.fly  simple-struct.fly.ast  simple.fly.ast
