[package]
name = "flywheel"
version = "0.1.0"
edition = "2021"

#[profile.release]
#debug = 1

[dependencies]
num_enum = "0.7.3"
string-interner = "0.18.0"
regex-automata = "0.4.9"
bumpalo = "3.16.0"

#[dependencies.regex-automata]
#default-features = false
#features = ["std", "perf", "unicode", "syntax", ]