[package]
name = "flywheel"
version = "0.1.0"
edition = "2021"

#[profile.release]
#debug = 1

[dependencies]
#num_enum = "0.7.3"
string-interner = "0.18.0"
regex-automata = "0.4.9"
bumpalo = "3.16.0"
dashmap = "6.1.0"
parking_lot = "0.12.3"
camino = "1.1.9"
memchr = "2.7.4"
tokio = { version = "1.42.0", features = ["parking_lot", "rt-multi-thread", "sync", "fs"]}
futures = "0.3.31"
normpath = "1.3.0"
im = "15.1.0"
triomphe = "0.1.14"

[dev-dependencies]
pretty_assertions = "1.4.1"

#[dependencies.regex-automata]
#default-features = false
#features = ["std", "perf", "unicode", "syntax", ]