[package]
name = "flywheel-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
flywheel-sources = { path = "../flywheel-sources" }
flywheel-parser = { path = "../flywheel-parser" }
parking_lot = "0.12.3"
camino = "1.1.9"
memchr = "2.7.4"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
normpath = "1.3.0"
rayon-core = "1.13.0"


[lints.clippy]
large_futures = { level = "warn" }
