[package]
name = "flywheel-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
flywheel-ast = { path = "../flywheel-ast" }
flywheel-error = { path = "../flywheel-error" }
flywheel-parser = { path = "../flywheel-parser" }
flywheel-sources = { path = "../flywheel-sources" }

camino = "1.1.9"

parking_lot = "0.12.3"
normpath = "1.3.0"

