[package]
name = "flywheel-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
flywheel-ast = { path = "../flywheel-ast" }
flywheel-error = { path = "../flywheel-error" }
flywheel-parser = { path = "../flywheel-parser" }
flywheel-sources = { path = "../flywheel-sources" }

camino = "1.1.9"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
normpath = "1.3.0"
parking_lot = "0.12.3"
rayon-core = "1.13.0"
