[package]
name = "flywheel-lower"
version = "0.1.0"
edition = "2024"

[dependencies]
flywheel-ast = { path = "../flywheel-ast" }
flywheel-error = { path = "../flywheel-error" }
flywheel-sources = { path = "../flywheel-sources" }
flywheel-exchange = { path = "../flywheel-exchange" }
paste = "1.0.15"
by_address = "1.2.1"
